# Django

./: pyproject.toml  requirements.txt
config/: settings.py  urls.py
core/: admin.py
core/migrations/: 0001_initial.py  0002_diretor_produtora.py  0003_filme.py  0004_pessoa_remove_filme_categoria_remove_filme_diretor_and_more.py  0005_pessoa_sexo.py  0006_cliente.py  0007_fornecedor.py  0008_alter_pessoa_email_alter_pessoa_telefone.py  0009_peca_pedido.py
core/models/: __init__.py  clientes.py  fornecedores.py  pecas.py  pedidos.py  pessoas.py
core/serializers/: __init__.py  clientes.py
core/views/: __init__.py  clientes.py
